2004-04-30	blytkerchan	repair compilation
	* configure.ac: find pthread_setspecific function in pthread library

2004-04-29	blytkerchan
	* AUTHORS: new file
	* NEWS: ditto
	* libmemory.sgml: update text throughout
	* smr.h (smr_init): take unsigned integer as parameter
	remove old comments

	* ChangeLog: update date of yesterday's changes (from apr 27 to apr 28)
	fix type-o in feb 25 entry
	* smr.c (smr_get_private_data): use dsize attribute of private data
	(smr_scan_worker): add FIXME note
	calculate and use new_dsize - the size of the new dlist
	use privately stored dsize in stead of calculating new one for the old dlist
	(smr_free): use privately stored dsize in stead of calculating new one
	* smr.h [smr_private_data_t]: dsize: new attribute

2004-04-28	blytkerchan
	* libmemory.3.sgml: new file
	* hptr.c: provide full path to compare_and_exchange.h in include
	(hptr_get_local_data): allocate K hazard pointers per thread, not N
	* smr.c (smr_get_private_data): calculate size of dlist - no of threads may change en-route
	(smr_scan_worker): ditto
	(smr_cleanup_private_data): add FIXME note
	(smr_init): only take number of hazard pointers per thread as parameter
	(smr_thread_init): increment number of active threads
	(smr_thread_fini): decrement number of active threads
	* smr.h [smr_global_data_t]: remove N and R fields - calculated on the fly

2004-03-19	blytkerchan
	* Makefile: remove
	* configure.ac: new file
	* Makefile.am: ditto
	* bootstrap: ditto

2004-03-03	blytkerchan
	* README: remove mention of the bug in the algorithm as it is invalid:
	a short discussion with mr Micheal has shown this..

2004-02-25	blytkerchan
	* hptr.c: don't include increment.h and decrement.h
	(hptr_register): remove unnecessary call to atomic_increment
	(hptr_free): remove unnecessary call to atomic_decrement
	(hptr_get_local_data): don't use the hpcount field in hptr_local_data_t
	* hptr.h <hptr_local_data_t>: remove hpcount field
	* Makefile: don't build increment and decrement
